YouTube live stream videos fail to play on older system
Categories
(Core :: Audio/Video: Playback, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr91 | --- | unaffected |
| firefox101 | --- | unaffected |
| firefox102 | --- | verified |
| firefox103 | --- | verified |
People
(Reporter: rxazub33, Assigned: gerard-majax)
References
(Regression)
Details
(Keywords: regression)
Attachments
(3 files)
|
119.11 KB,
application/zip
|
Details | |
|
36.26 KB,
application/zip
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
User Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64; rv:102.0) Gecko/20100101 Firefox/102.0
Steps to reproduce:
Attempt to play any live stream video on YouTube. Examples:
https://www.youtube.com/watch?v=GE_SfNVNyqk
https://www.youtube.com/watch?v=9Iup70E0Ig0
Actual results:
Videos do not play. YouTube displays the error "Your browser can't play this video." or "An error occurred. Please try again later."
Expected results:
Videos should play.
| Reporter | ||
Comment 1•3 years ago
|
||
Additional info:
Ordinary (non-live) videos seem unaffected.
Issue applies to my Windows 8.1 64-bit system (wasn't able to reproduce with Firefox 101.0b2 on a couple of Windows 10 21H2 systems).
Problem started after updating from Firefox 101 to 102.0b2. Issue persists in Troubleshoot Mode and regardless of hardware acceleration setting. Also reproduced in 103.0a1 (2022-05-31) with a clean profile.
The videos play fine with 91.10.0esr and 101.0.
Comment 2•3 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Audio/Video: Playback' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
| Reporter | ||
Comment 3•3 years ago
|
||
Note I've since encountered issues with video playback on other sites in 102.0b3 and 103.0a1 (2022-06-02).
Netflix streams fail with error code F7355-1203 or F7701-1003. The first is said to indicate an audio codec problem, while the latter is more general.
ABC iView streams (e.g. https://iview.abc.net.au/video/NS1413V001S00) fail with error code 246001 or 102630, which aren't helpfully defined.
No problems with those on the same system when using 91.10.0esr, 101.0, or the latest Microsoft Edge.
I can confirm that issue. I have GeForce GTX760 GPU, but browser detects it as NVIDIA GeForce GTX 480 for some reason.
I've checked with Firefox Nightly fresh install and issue with both YouTube live streams and Spotify audio playback first time appeared on 102.0a1.
Comment 6•3 years ago
|
||
If this issue is a regression, could anyone help me use mozregression to find out the culprit?
Also, does turning off the pref media.utility-process.enabled help?
Thanks!
(In reply to Alastor Wu [:alwu] from comment #6)
If this issue is a regression, could anyone help me use mozregression to find out the culprit?
Also, does turning off the prefmedia.utility-process.enabledhelp?
Thanks!
Yes, I've switched media.utility-process.enabled to "false" and everything is working again - YouTube plays live streams and not showing "Your browser can't play this video" error anymore. Also Spotify and Twitter (videos) are playing audio again. Turning this pref to "true" brings problem back. Double checked it.
Comment 8•3 years ago
|
||
Would you mind help me capture debug log with MOZ_LOG=timestamp,MediaDecoder:5,MediaFormatReader:5,PlatformDecoderModule:5?
Thank you so much!
| Assignee | ||
Comment 9•3 years ago
|
||
Cletus mentionned running into the issue on Windows 8.1, could you confirm if you are both running this, and maybe share some about:support of your system?
| Assignee | ||
Updated•3 years ago
|
Comment 10•3 years ago
|
||
Set release status flags based on info from the regressing bug 1767582
| Assignee | ||
Comment 11•3 years ago
|
||
Good news, I get to repro trivially on a Win 8.1 VM.
| Assignee | ||
Comment 12•3 years ago
|
||
It worked the second time I tried, when I had set MOZ_LOG
| Assignee | ||
Comment 13•3 years ago
|
||
| Assignee | ||
Comment 14•3 years ago
|
||
This is from good playback, but I've seen in the logs that some process expose loading failure:
2022-06-06 20:39:48.428000 UTC - [Utility AudioDecoder 3152: COM MTA]: D/PlatformDecoderModule MP3 is enabled
2022-06-06 20:39:48.428000 UTC - [Utility AudioDecoder 3152: COM MTA]: D/PlatformDecoderModule AAC failed with code 0x8007045a
This is in utility.log.child-10.moz_log, so i'd suspect that maybe some security enhancement on Windows 8.1 might not be working as intended and we fail to load AAC decoder?
| Assignee | ||
Comment 15•3 years ago
|
||
Comment 16•3 years ago
|
||
Per offline discussion, :gerard-majax will test removing some security enhancement tomorrow to see if that helps. One of the possible cause is we disabled dynamic code generation on the utility process.
| Assignee | ||
Comment 17•3 years ago
|
||
Indeed, I made some opt build, ran them on Win 8.1 VM, and:
- m-c: repro quite easily
- m-c with no
MITIGATION_DYNAMIC_CODE_DISABLE: I can't repro anymore, on all the shared links
The ABC live is failing for me with error 246007 which is documented by ABC's website as a failure of DRMs, so I assume this is because of my usage inside a VM maybe, but at lease error code is clear and documented so I dont think it's due to Utility this time.
Updated•3 years ago
|
Comment 18•3 years ago
|
||
The bug has a release status flag that shows some version of Firefox is affected, thus it will be considered confirmed.
| Assignee | ||
Comment 19•3 years ago
|
||
Updated•3 years ago
|
| Assignee | ||
Comment 20•3 years ago
•
|
||
Comment on attachment 9280030 [details]
Bug 1772053 - Enable dynamic code disable mitigations only on Windows 10 1703+ r?bobowen!
Beta/Release Uplift Approval Request
- User impact if declined: no video playback on several website
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: Using a Windows version prior to any Win10 < 1703 or even earlier (8.1) Browse to https://www.youtube.com/watch?v=GE_SfNVNyqk, video should play
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): We are limiting application of security enhancements to some versions of Windows instead of applying to all
- String changes made/needed: N/A
- Is Android affected?: No
| Assignee | ||
Updated•3 years ago
|
Comment 21•3 years ago
|
||
Comment 22•3 years ago
|
||
| bugherder | ||
Updated•3 years ago
|
Comment 23•3 years ago
|
||
I was able to reproduce the issue on Win8.1 using build 103.0a1 (20220531065724).
Issue is fixed on Win8.1 using Nightly build 103.0a1 (20220608093201).
| Reporter | ||
Comment 24•3 years ago
|
||
Just confirming that setting media.utility-process.enabled to false as earlier requested does resolve the playback issue with 102 beta on my system as well, and Nightly 103.0a1 (2022-06-08) has playback working without any changes to default settings.
Thank you for your work on this issue.
| Assignee | ||
Comment 25•3 years ago
|
||
(In reply to Cletus Van Damme from comment #24)
Just confirming that setting media.utility-process.enabled to false as earlier requested does resolve the playback issue with 102 beta on my system as well, and Nightly 103.0a1 (2022-06-08) has playback working without any changes to default settings.
Thank you for your work on this issue.
Thanks, I assume you mean that it is nightly 20220608093201 where the fix is landed. Uplift has been requested, so it should be in the next beta. I wish we got report of that breakage earlier, it turned out it hit up to Windows 10 v1607 included. Probably the nightly windows population has very uptodate software ?
| Reporter | ||
Comment 26•3 years ago
|
||
(In reply to Alexandre LISSY :gerard-majax from comment #25)
Thanks, I assume you mean that it is nightly
20220608093201where the fix is landed. Uplift has been requested, so it should be in the next beta. I wish we got report of that breakage earlier, it turned out it hit up to Windows 10 v1607 included. Probably the nightly windows population has very uptodate software ?
Unsure which day it was fixed as I don't update Nightly every day, but yes, it's fine as of 20220608093201. 102.0b5 is still affected, but I'll check again as the beta updates.
Didn't run into the issue sooner myself as even though I have Nightly installed for occasional testing, Beta is the newest I use on a daily basis.
Comment 27•3 years ago
|
||
Comment on attachment 9280030 [details]
Bug 1772053 - Enable dynamic code disable mitigations only on Windows 10 1703+ r?bobowen!
Approved for 102 beta 6, thanks.
Comment 28•3 years ago
|
||
| bugherder uplift | ||
Comment 29•3 years ago
|
||
Reproduced this issue on an affected Nightly build from 2022-05-31, on Win 8.1 x64.
Verified fixed on Firefox 102.0b6 (20220609185805) Win 8.1.
As per Comment 23, I will mark this as verified fixed on 103.0a1 as well.
Updated•3 years ago
|
| Assignee | ||
Updated•1 year ago
|
Description
•