Bug 1772053 - Enable dynamic code disable mitigations only on Windows 10 1703+ r=bobowen a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D148502