security/sandbox/win/src/sandboxbroker/sandboxBroker.cpp
@@ -1332,14 +1332,17 @@ bool SandboxBroker::SetSecurityLevelForUtilityProcess(
   }
 
   mitigations = sandbox::MITIGATION_STRICT_HANDLE_CHECKS |
-                sandbox::MITIGATION_DLL_SEARCH_ORDER
+                sandbox::MITIGATION_DLL_SEARCH_ORDER;
 // TODO: Bug 1766432 - Investigate why this crashes in MSAudDecMFT.dll during
 // Utility AudioDecoder process startup only on 32-bits systems.
-// Investiate also why it crashes (no idea where exactly) for MinGW64 builds
+// Investigate also why it crashes (no idea where exactly) for MinGW64 builds
+//
+// TODO: Bug 1773005 - AAC seems to not work on Windows < 1703
+  if (IsWin10CreatorsUpdateOrLater()) {
 #if defined(_M_X64) && !defined(__MINGW64__)
-                | sandbox::MITIGATION_DYNAMIC_CODE_DISABLE
-#endif  // defined(_M_X64)
-      ;
+    mitigations |= sandbox::MITIGATION_DYNAMIC_CODE_DISABLE;
+#endif  // defined(_M_X64) && !defined(__MINGW64__)
+  }
 
   if (exceptionModules.isNothing()) {
     mitigations |= sandbox::MITIGATION_FORCE_MS_SIGNED_BINS;
